--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=aws_java
+
+#spring.datasource.driver-class=com.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://13.233.232.255:3306/awsdb1
+spring.datasource.username=ec2-user
+spring.datasource.password=Gaurav@0430
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
